# musicr

./: .gitignore  README.md  instruments.ipynb  note detect.ipynb  pyproject.toml  requirements.txt
app/: app.py
notebooks/: FrequencyDomain.ipynb  audio_practice.ipynb  change_points.ipynb  different_waves.ipynb  instrument_detection.ipynb  instruments.ipynb  note detect.ipynb  notes_fft.ipynb  smthg.ipynb
notebooks/nn/: nn.py
notebooks/utils/: read_write.py  waves.py
pipeline/: landing_to_raw.ipynb  raw_to_trusted.ipynb
pipeline/trusted/: combined_wav.csv  data_catalog.csv
