[project]
name = "musicr"
version = "0.1.0"
description = ""
authors = [
    {name = "Anand Krishnakumar ",email = "anandkrishnakumar123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras (>=3.8.0,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "streamlit (>=1.42.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
